--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-geocoder": "3.22.0",
     "mysql": "2.16.0",
     "randomstring": "1.1.5",
-    "node-datetime": "2.1.2"
+    "node-datetime": "2.1.2",
+    "type-of-is": "3.5.1"
   }
 }
