--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "2.16.0",
     "randomstring": "1.1.5",
     "node-datetime": "2.1.2",
-    "type-of-is": "3.5.1"
+    "type-of-is": "3.5.1",
+    "jsonwebtoken": "8.4.0"
   }
 }
