--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "randomstring": "1.1.5",
     "node-datetime": "2.1.2",
     "type-of-is": "3.5.1",
-    "jsonwebtoken": "8.4.0"
+    "jsonwebtoken": "8.4.0",
+    "body-parser": "1.18.3"
   }
 }
