--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "8.4.0",
     "body-parser": "1.18.3",
     "cors": "2.8.5",
-    "iso-week": "0.1.2"
+    "iso-week": "0.1.2",
+    "date-and-time": "0.6.3"
   }
 }
