--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "1.18.3",
     "cors": "2.8.5",
     "iso-week": "0.1.2",
-    "date-and-time": "0.6.3"
+    "date-and-time": "0.6.3",
+    "mathjs": "5.4.1"
   }
 }
